ChangeLog for herdstat

2005-05-04 Aaron Walker <ka0ttic@gentoo.org>

	* lib/portage_misc.cc, lib/portage_misc.hh: Rewrote
	portage::categories_T.  Now supports /etc/portage/categories.
	* lib/portage_find.cc, lib/portage_version.cc, src/metadatas.cc: Use
	const dir_T/dir_T::const_iterator.
	* src/action_herd_handler.cc: Display timer info if --timer.

2005-05-03 Aaron Walker <ka0ttic@gentoo.org>

	* configure.ac: Update version (1.1.0_rc3).
	* src/action_dev_handler.cc, src/action_pkg_handler.cc,
	src/action_meta_handler.cc: Tidy up.  Broke up operator() into smaller
	static functions to make it easier to read/maintain.
	* src/action_dev_handler.cc, src/action_pkg_handler.cc,
	src/action_stats_handler.cc: Display elapsed parsing time of
	herds.xml if --timer.
	* lib/misc.cc, lib/string.cc, lib/cache.hh, lib/file.cc, lib/file.hh:
	Tidy.
	* src/herds_xml.hh: Added const version of operator[] so we can
	use const herds_xml_T objects (there's not really a reason to ever
	have a non-const instantiation).
	* src/herds.cc: Run herd description through util::tidy_whitespace()
	before displaying.
	* src/herds_xml_handler.cc, src/metadata_xml_handler.cc: Modified
	on_characters() callback to append "@gentoo.org" if the domain is not
	gentoo.org (usually caused by a typo).  Otherwise, the dev shows up as
	not existing in herds.xml since we search for 'dev + @gentoo.org'.

2005-05-02 Aaron Walker <ka0ttic@gentoo.org>

	* src/file.cc: Throw a bad_fileobject_E exception if open() fails.

2005-04-30 Aaron Walker <ka0ttic@gentoo.org>

	* src/xmlparser.hh, src/herds_xml_handler.cc,
	src/herds_xml_handler.hh, src/metadata_xml_handler.cc,
	src/metadata_xml_handler.hh: Updated parser interface to be easily
	changeable in the case we ever change the parser lib again.
	* src/xml.hh: Added generic xml_T type to represent any XML file.
	This is now the sole user of our XMLParser_T interface, in addition to
	util::timer_T and std::auto_ptr<content_handler>.